--- a/app/index.html
+++ b/app/index.html
@@ -63,6 +63,7 @@
     <script src="bower_components/jquery-placeholder/jquery.placeholder.js"></script>
     <script src="bower_components/foundation/js/foundation.js"></script>
     <script src="bower_components/d3/d3.js"></script>
+    <script src="bower_components/underscore/underscore.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -71,6 +72,7 @@
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/directives/mexicomap.js"></script>
         <script src="scripts/services/settings.js"></script>
+        <script src="scripts/services/api.js"></script>
         <!-- endbuild -->
 </body>
 </html>
