added default settings for the map colors

--- a/app/index.html
+++ b/app/index.html
@@ -71,6 +71,7 @@
         <script src="scripts/directives/mexicomap.js"></script>
         <script src="scripts/services/api.js"></script>
         <script src="scripts/vendor/topojson.v0.min.js"></script>
+        <script src="scripts/services/settings.js"></script>
         <!-- endbuild -->
 </body>
 </html>
