added support for theroku to the app

--- a/app/index.html
+++ b/app/index.html
@@ -40,6 +40,7 @@
       //  ga('create', 'UA-XXXXX-X');
       //  ga('send', 'pageview');
     </script>
+    <script src="http://d3js.org/topojson.v0.min.js"></script>
 
     <!-- build:js(.) scripts/oldieshim.js -->
     <!--[if lt IE 9]>
@@ -70,7 +71,6 @@
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/directives/mexicomap.js"></script>
         <script src="scripts/services/api.js"></script>
-        <script src="scripts/vendor/topojson.v0.min.js"></script>
         <script src="scripts/services/settings.js"></script>
         <!-- endbuild -->
 </body>
