fix https vs http bug

--- a/app/index.html
+++ b/app/index.html
@@ -40,7 +40,7 @@
       //  ga('create', 'UA-XXXXX-X');
       //  ga('send', 'pageview');
     </script>
-    <script src="http://d3js.org/topojson.v0.min.js"></script>
+    <script src="//d3js.org/topojson.v0.min.js"></script>
 
     <!-- build:js(.) scripts/oldieshim.js -->
     <!--[if lt IE 9]>
