--- a/app/index.html
+++ b/app/index.html
@@ -68,6 +68,7 @@
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
+        <script src="scripts/topojson.v0.min.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/directives/mexicomap.js"></script>
         <script src="scripts/services/api.js"></script>
