topjson file is local

--- a/app/index.html
+++ b/app/index.html
@@ -65,9 +65,10 @@
     <!-- endbower -->
     <!-- endbuild -->
 
+    <script src="topojson.v0.min.js"></script>
+        
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
-        <script src="scripts/topojson.v0.min.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/directives/mexicomap.js"></script>
         <script src="scripts/services/api.js"></script>
