--- a/app/index.html
+++ b/app/index.html
@@ -73,6 +73,7 @@
         <script src="scripts/directives/mexicomap.js"></script>
         <script src="scripts/services/api.js"></script>
         <script src="scripts/services/settings.js"></script>
+        <script src="scripts/services/utilities.js"></script>
         <!-- endbuild -->
 </body>
 </html>
