number are read more humane

--- a/app/index.html
+++ b/app/index.html
@@ -62,11 +62,12 @@
     <script src="bower_components/foundation/js/foundation.js"></script>
     <script src="bower_components/d3/d3.js"></script>
     <script src="bower_components/underscore/underscore.js"></script>
+    <script src="bower_components/humanize-plus/public/src/humanize.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
     <script src="topojson.v0.min.js"></script>
-        
+
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
@@ -74,6 +75,7 @@
         <script src="scripts/services/api.js"></script>
         <script src="scripts/services/settings.js"></script>
         <script src="scripts/services/utilities.js"></script>
+        <script src="scripts/filters/humanizeint.js"></script>
         <!-- endbuild -->
 </body>
 </html>
