added tags closeble

--- a/app/index.html
+++ b/app/index.html
@@ -76,6 +76,7 @@
         <script src="scripts/services/settings.js"></script>
         <script src="scripts/services/utilities.js"></script>
         <script src="scripts/filters/humanizeint.js"></script>
+        <script src="scripts/directives/closabletag.js"></script>
         <!-- endbuild -->
 </body>
 </html>
