--- a/app/index.html
+++ b/app/index.html
@@ -56,6 +56,7 @@
     <script src="bower_components/underscore/underscore.js"></script>
     <script src="bower_components/humanize-plus/public/src/humanize.js"></script>
     <script src="bower_components/angular-foundation/mm-foundation-tpls.js"></script>
+    <script src="bower_components/angular-utils-pagination/dirPagination.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
