created a footer with links and images

--- a/app/index.html
+++ b/app/index.html
@@ -28,6 +28,21 @@
       <div ng-view=""></div>
     </div>
 
+    <div class="footer">
+      <div class="text-center" style="margin-bottom: 20px;">
+        <a href="#"><img src="images/cc.logo.png" class="footer-img-fat" alt="" /></a>
+        <a href="#"><img src="images/cemda-logo_trans.png" alt="" class="footer-img-tall" /></a>
+        <a href="#"><img src="images/logo-gflac_trans.png" class="footer-img-fat" alt="" /></a>
+        <a href="#"><img src="images/logo-ifai.png" alt="" class="footer-img-tall" /></a>
+      </div>
+
+      <div class="text-center">
+        <a class="footer-link" target="_blank" href="http://datamx.io/dataset/inversion-ambiental/resource/39774bca-713e-46c5-bbbb-dfda9cc94be3">Datos abiertos</a>
+        <a class="footer-link" target="_blank" href="https://github.com/CodeandoMexico/financiamiento-climatico">C&oacute;digo abierto</a>
+        <a class="footer-link" target="_blank" href="http://www.tm.org.mx/contacto/">Contacto</a>
+      </div>
+    </div>
+
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
      <script>
       //  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
