added a new logo

--- a/app/index.html
+++ b/app/index.html
@@ -30,8 +30,9 @@
 
     <div class="footer">
       <div class="text-center" style="margin-bottom: 20px;">
-        <a href="#"><img src="images/cc.logo.png" class="footer-img-fat" alt="" /></a>
+        <a target="_blank" href="http://www.tm.org.mx/"><img src="images/transparencia_mexicana.gif" class="footer-img-fat" alt="" /></a>
         <a href="#"><img src="images/logo-gflac_trans.png" class="footer-img-fat" alt="" /></a>
+        <a href="#"><img src="images/cc.logo.png" class="footer-img-fat" alt="" /></a>
       </div>
 
       <div class="text-center">
