added title to the webapp, resized the logos

--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html class="no-js">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Financiamiento en cambio climático - Transparencia Mexicana</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -29,10 +29,10 @@
     </div>
 
     <div class="footer">
-      <div class="text-center" style="margin-bottom: 20px;">
+      <div class="text-center">
         <a target="_blank" href="http://www.tm.org.mx/"><img src="images/transparencia_mexicana.gif" class="footer-img-fat" alt="" /></a>
         <a href="#"><img src="images/logo-gflac_trans.png" class="footer-img-fat" alt="" /></a>
-        <a href="#"><img src="images/cc.logo.png" class="footer-img-fat" alt="" /></a>
+        <!-- <a href="#"><img src="images/cc.logo.png" class="footer-img-fat" alt="" /></a> -->
       </div>
 
       <div class="text-center">
@@ -40,6 +40,13 @@
         <a class="footer-link" target="_blank" href="https://github.com/CodeandoMexico/financiamiento-climatico">C&oacute;digo abierto</a>
         <a class="footer-link" target="_blank" href="http://www.tm.org.mx/contacto/">Contacto</a>
         <a class="footer-link" target="_blank" href="https://github.com/CodeandoMexico/financiamiento-climatico/blob/master/LICENSE">Licencia</a>
+      </div>
+
+      <div class="row footer-message text-center">
+        <p>
+          Plataforma de georreferenciación del financiamiento climático elaborada por Transparencia Mexicana.
+          El desarrollo de esta plataforma fue posible gracias al apoyo del Grupo de Financiamiento Climático para América Latina y el Caribe (GFLAC).
+        </p>
       </div>
     </div>
 
