header and footer redesign

--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,7 @@
     <title>Financiamiento en cambio climático - Transparencia Mexicana</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
+    <link href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
@@ -26,10 +27,10 @@
 
     <div id="header">
       <div class="row full__width">
-        <div class="small-5 large-5 columns"></div>
-        <div class="small-7 large-7 columns">
-          <p class="text-right" style="margin:0;">Financiamiento internacional para cambio climático en M&eacute;xico</p>
+        <div class="small-5 large-5 columns">
+          <a target="_blank" href="http://www.tm.org.mx/"><img src="images/transparencialogo.png" style="width:200px;" alt="" /></a>
         </div>
+        <div class="small-7 large-7 columns"></div>
       </div>
     </div>
 
@@ -49,10 +50,6 @@
           <a class="footer-link" target="_blank" href="https://github.com/CodeandoMexico/financiamiento-climatico">C&oacute;digo abierto</a>
           <a class="footer-link" target="_blank" href="http://www.tm.org.mx/contacto/">Contacto</a>
           <a class="footer-link" target="_blank" href="https://github.com/CodeandoMexico/financiamiento-climatico/blob/master/LICENSE">Licencia</a>
-
-          <!-- Github and twitter icons -->
-          <a target="_blank" href="https://github.com/CodeandoMexico/financiamiento-climatico"><img src="images/github.png" class="icon" alt="" /></a>
-          <a target="_blank" href="https://twitter.com/"><img src="images/twitter.png" class="icon" alt="" /></a>
         </div>
       </div>
 
