Header and footer texts  change

--- a/app/index.html
+++ b/app/index.html
@@ -55,8 +55,14 @@
 
       <div class="row footer-message text-center">
         <p>
-          Plataforma de georreferenciación del financiamiento climático elaborada por Transparencia Mexicana.
-          El desarrollo de esta plataforma fue posible gracias al apoyo del Grupo de Financiamiento Climático para América Latina y el Caribe (GFLAC).
+          Los datos reflejados en el mapa y los proyectos identificados son
+          producto de un trabajo de sistematizaci&oacute;n de Transparencia
+          Mexicana (datos 2009 – 2012) y del Centro Mexicano de Derecho Ambiental
+          (datos 2013 – 2014). Los datos fueron obtenidos con base en la
+          informaci&oacute;n p&uacute;blica disponible de fondos internacionales,
+          agencias de cooperaci&oacute;n, bancos multilaterales, regionales y
+          otros actores que forman parte del financiamiento clim&aacute;tico en
+          M&eacute;xico.
         </p>
       </div>
     </div>
