Contact link is an email now

--- a/app/index.html
+++ b/app/index.html
@@ -48,7 +48,7 @@
         <div class="small-12 large-6 columns text-center" style="margin-top:17px;">
           <a class="footer-link" target="_blank" href="http://datamx.io/dataset/inversion-ambiental/resource/39774bca-713e-46c5-bbbb-dfda9cc94be3">Datos abiertos</a>
           <a class="footer-link" target="_blank" href="https://github.com/CodeandoMexico/financiamiento-climatico">C&oacute;digo abierto</a>
-          <a class="footer-link" target="_blank" href="http://www.tm.org.mx/contacto/">Contacto</a>
+          <a class="footer-link" href="mailto:vmontalvo@tm.org.mx">Contacto</a>
           <a class="footer-link" target="_blank" href="https://github.com/CodeandoMexico/financiamiento-climatico/blob/master/LICENSE">Licencia</a>
         </div>
       </div>
