--- a/app/index.html
+++ b/app/index.html
@@ -87,6 +87,7 @@
 
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
+    <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-resource/angular-resource.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
@@ -96,6 +97,10 @@
     <script src="bower_components/humanize-plus/public/src/humanize.js"></script>
     <script src="bower_components/angular-foundation/mm-foundation-tpls.js"></script>
     <script src="bower_components/angular-utils-pagination/dirPagination.js"></script>
+    <script src="bower_components/highcharts-ng/dist/highcharts-ng.js"></script>
+    <script src="bower_components/highcharts/highcharts.js"></script>
+    <script src="bower_components/highcharts/highcharts-more.js"></script>
+    <script src="bower_components/highcharts/modules/exporting.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -110,6 +115,7 @@
         <script src="scripts/services/utilities.js"></script>
         <script src="scripts/filters/humanizeint.js"></script>
         <script src="scripts/directives/closabletag.js"></script>
+        <script src="scripts/services/chart.js"></script>
         <!-- endbuild -->
 </body>
 </html>
